[tool.poetry]
name = "rag"
version = "0.1.0"
description = "This is a basic rag implementation."
authors = ["Sneh Vora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
streamlit = "^1.37.0"
libmagic = "^1.0"
python-magic = "^0.4.27"
unstructured = {version = "^0.15.0", python="^3.10,<3.13"}
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.0.1"
langchain-community = "^0.2.10"
langchain-cohere = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
